# openconf

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SCIENCE.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: _api_check.py  perf_bench.py  profile_maraviroc.py  use_case_configs.py
docs/: benchmark_report.md  macrocycle_benchmark_report.md
openconf/: __init__.py  api.py  config.py  constraints.py  dedupe.py  exceptions.py  io.py  perceive.py  pool.py  relax.py  torsionlib.py  tuning.py
openconf/data/: __init__.py  runtime_tuning.json  torsion_library.json
openconf/propose/: __init__.py  amide_seeds.py  candidates.py  hybrid.py  low_mode.py  moves.py  seeding.py  stats.py
scripts/: bench_utils.py  benchmark_analysis.py  benchmark_lib.py  comprehensive_benchmark.py  download_pdbbind.py  fair_benchmark.py  fair_benchmark_full_results.csv  iridium_benchmark_results.csv  iridium_comprehensive_results.csv  iridium_comprehensive_results.tex  macrocycle_benchmark.py  macrocycle_benchmark_results.csv  make_blog_figures.py  scaling_benchmark.py  scaling_results.csv
static/iridium/: 1a28_flynn_refined_lig.sdf  1ai5_flynn_refined_lig.sdf  1azm_flynn_refined_lig.sdf  1b9v_flynn_refined_lig.sdf  1br6_flynn_refined_lig.sdf  1c1b_flynn_refined_lig.sdf  1ctr_flynn_refined_lig.sdf  1cvu_flynn_refined_lig.sdf  1cx2_flynn_refined_lig.sdf  1d3h_flynn_refined_lig.sdf  1dd7_flynn_refined_lig.sdf  1dds_flynn_refined_lig.sdf  1eoc_flynn_refined_lig.sdf  1exa_flynn_refined_lig.sdf  1ezq_flynn_refined_lig.sdf  1f0s_flynn_refined_lig.sdf  1f0t_flynn_refined_lig.sdf  1f0u_flynn_refined_lig.sdf  1fcx_flynn_refined_lig.sdf  1fcz_flynn_refined_lig.sdf  1fh8_flynn_refined_lig.sdf  1fh9_flynn_refined_lig.sdf  1fhd_flynn_refined_lig.sdf  1fjs_flynn_refined_lig.sdf  1fl3_flynn_refined_lig.sdf  1fm6_flynn_refined_lig.sdf  1fm9_flynn_refined_lig.sdf  1fq5_flynn_refined_lig.sdf  1frp_flynn_refined_lig.sdf  1fvt_flynn_refined_lig.sdf  1g9v_flynn_refined_lig.sdf  1gm8_flynn_refined_lig.sdf  1gwx_flynn_refined_lig.sdf  1h1p_flynn_refined_lig.sdf  1h1s_flynn_refined_lig.sdf  (+85 more)
tests/: __init__.py  test_basic.py  test_constrained.py  test_low_mode.py  test_macrocycles.py  test_stub.py
(+3 files in other folders)
