[project]
name = "openconf"
description = "Conformer generation for drug-like molecules"
version = "0.0.13"
readme = "README.md"
license = "MIT"
authors = [{name = "Corin Wagen"}]
keywords = []
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "rdkit",
    "prism-pruner>=0.1.2",
]

[dependency-groups]
dev = [
    "ipython",
    "pytest>=9",
    "pytest-cov>=7",
    "ruff>=0.15",
    "ty>=0.0.21",
]

[tool.hatch.build.targets.wheel]
include = ["openconf/"]
exclude = ["openconf/tests/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "D105", # Missing docstring in magic method
    "N806", # Non-lowercase variable in function
    "PLC0415", # Import should be top-level
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value in comparison
    "PT011", # `pytest.raises(ValueError)` is too broad
    "RUF002", # Docstring contains ambiguous `–` (EN DASH).
    "TID252", # Prefer absolute over relative imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"scripts/**" = ["D100", "D101", "D102", "D103", "D401", "E501", "E741", "B905", "PLC0206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests", "openconf"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.ty.rules]
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unresolved-reference = "ignore"
